--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "format": "prettier --write src/**/{**/*,*}.{tsx,ts,js,css}",
     "lint": "tsc --noEmit && eslint src --max-warnings=0",
     "prepare": "husky install",
-    "pre-commit": "lint && react-scripts-test --coverage --watchAll=false --silent",
-    "pre-push": "react-scripts-test --coverage --watchAll=false --silent"
+    "pre-commit": "lint-staged",
+    "pre-push": ""
   },
   "eslintConfig": {
     "extends": [
@@ -56,6 +56,11 @@
     "sass": "^1.55.0",
     "json-server": "^0.17.0",
     "prettier": "^2.6.2",
-    "husky": "^8.0.1"
+    "husky": "^8.0.1",
+    "lint-staged":"^13.0.3"
+  },
+  "lint-staged": {
+    "*{ts,tsx}": "eslint --fix",
+    "*{tsx,scss,md}": "prettier --write"
   }
 }
