--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "classnames": "2.3.2",
     "date-fns": "2.29.3",
     "bootstrap": "^5.1.3",
-    "axios": "1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
@@ -27,6 +26,7 @@
     "start": "set PORT=3010 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:coverage": "npm test -- --env=jsdom --coverage --watchAll=false --silent",
     "eject": "react-scripts eject",
     "format": "prettier --write src/**/{**/*,*}.{tsx,ts,js,css}",
     "lint": "tsc --noEmit && eslint src --max-warnings=0",
@@ -57,7 +57,8 @@
     "json-server": "^0.17.0",
     "prettier": "^2.6.2",
     "husky": "^8.0.1",
-    "lint-staged":"^13.0.3"
+    "lint-staged":"^13.0.3",
+    "msw": "^0.47.4"
   },
   "lint-staged": {
     "*{ts,tsx}": "eslint --fix",
